# Livestore-FastAPI-Example

./: .env  .env.example  ADMIN_SYSTEM.md  CHANGELOG.md  CLAUDE.md  Caddyfile  README.md  brokendocker-compose.yml  docker-compose.yml  index.html  nginx.conf  package-lock.json  sync-cf-dokumentation.md  vite.config.ts
apps/admin-client/: Dockerfile  package-lock.json  package.json  vite.config.ts
apps/admin-client/src/: App.vue
apps/client/: .env.example  package.json  vite.config.ts
apps/server/: .dockerignore  .gitignore  Dockerfile  README.md  init_admin.py  pyproject.toml  requirements.txt  run_dev.sh  start.sh  startup.sh
apps/server/app/: auth.py  database.py  jwt_auth.py  main.py  models.py  user_database.py
apps/server/app/api/: admin.py  auth.py  router.py
apps/server/app/api/v1/: __init__.py  admin.py  auth.py  health.py
apps/server/app/auth/: __init__.py  bearer.py  jwt.py  middleware.py  websocket.py
apps/server/app/core/: config.py  dependencies.py  logging.py
apps/server/app/db/: __init__.py  base.py  postgres.py  user_db.py
apps/server/app/services/: __init__.py  event_service.py  workspace_service.py
apps/server/app/websocket/: __init__.py  handler.py  manager.py
server/: Dockerfile  package-lock.json  package.json  tsconfig.json
server-python/: .gitignore  setup_dev.py
server-python/app/: auth.py  database.py  message_types.py  websocket_handler.py
server/src/: db.ts  electric-handler.ts  server.ts
src/: App.vue
src/api/: electric-handler.ts  electric.ts
src/router/: index.ts
src/scripts/: setup-db.ts
(+14 files in other folders)
